<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_app"
    android:background="@color/calcBackground"
    tools:context="com.diazbumma.fragmentapplication.BlankFragment">

    <TextView
        android:id="@+id/text_bilangan_satu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/putih"
        android:text="@string/bil_satu" />
    <EditText
        android:id="@+id/bilangan_satu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/putih"
        android:textColor="@color/putih"
        android:layout_below="@id/text_bilangan_satu"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/text_bilangan_dua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilangan_satu"
        android:textColor="@color/putih"
        android:text="@string/bil_dua"/>
    <EditText
        android:id="@+id/bilangan_dua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/putih"
        android:textColor="@color/putih"
        android:layout_below="@id/text_bilangan_dua"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/p_button"
        android:layout_height="@dimen/p_button"
        android:layout_below="@id/bilangan_dua"
        android:text="@string/plus"/>
    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/p_button"
        android:layout_height="@dimen/p_button"
        android:layout_below="@id/bilangan_dua"
        android:layout_toRightOf="@id/button_plus"
        android:text="@string/minus"
        />
    <Button
        android:id="@+id/button_kali"
        android:layout_width="@dimen/p_button"
        android:layout_height="@dimen/p_button"
        android:layout_below="@id/button_plus"
        android:text="@string/kali"/>
    <Button
        android:id="@+id/button_bagi"
        android:layout_width="@dimen/p_button"
        android:layout_height="@dimen/p_button"
        android:layout_below="@id/button_minus"
        android:layout_toRightOf="@id/button_plus"
        android:text="@string/bagi"/>


</RelativeLayout>